gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: gatewayapp
  namespace: production
spec:
  gatewayClassName: gke-l7-rilb
  listeners: 
  - name : http 
    protocol: HTTP
    port: 80 
    allowedRoutes: 
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: internal-http
  namespace: production
spec:
  parentRefs:
  - kind: gateway
    name: gatewayapp
  hostnames:
  - "sampleweb.com"
  rules:
  - matches:
    - path: 
        type: PathPrefix
        value: /
    backendRefs:
    - name: nodeappsvc
      port: 80
