ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeappdeployment
  namespace: production
spec: 
  selector:
    matchLabels:
      app: nodeapp
#  replicas: 2
  template:
    metadata: 
#      name: nodeapppod
        labels:
          app: nodeapp #pod
    spec:
      containers:
      - name: nodeappcontainer
        image: pratiksanas5/hello-node:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nodeappsvc
  namespace: production
  labels:
    app: nodeapp
spec:
  type: ClusterIP
  selector:
    app: nodeapp
  ports:
  - port: 3001
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: production
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sampleprojectip
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:    
  rules:   
    - host: pratiksanas.live
      http:   
        paths:   
          - path: /  
            pathType: Prefix   
            backend:   
              service:   
                name: nodeappsvc 
                port:   
                  number: 80
